# rag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
rag/docs_rag/: chroma_indexer.py  docs_chat.py  docs_rag.py  history.py  index.py  utils.py
rag/tests/: stub_test.py
