[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["mattecasu <mattecasu@gmail.com>"]
readme = "README.md"
packages = [{ include = "rag" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.2.12"
chromadb = "^0.5.5"
pypdf = "^4.3.1"
langchainhub = "^0.1.20"
transformers = "^4.44.0"
pytest = "^8.3.2"
sentence-transformers = "^3.0.1"
srsly = "^2.4.8"
streamlit = "^1.37.1"
docx2txt = "^0.8"
unstructured = {extras = ["all-docs"], version = "^0.15.1"}
python-docx = "^1.1.2"
watchdog = "^4.0.1"
langchain-community = "^0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
