[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["mattecasu <mattecasu@gmail.com>"]
readme = "README.md"
packages = [{ include = "rag" }]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12.8"
langchain = "^0.3.9"
pypdf = "^5.1.0"
langchainhub = "^0.1.20"
transformers = "^4.47.0"
pytest = "^8.3.2"
sentence-transformers = "^3.0.1"
srsly = "^2.4.8"
streamlit = "^1.41.1"
docx2txt = "^0.8"
unstructured = { extras = ["all-docs"], version = "^0.16.11" }
python-docx = "^1.1.2"
watchdog = "^6.0.0"
langchain-community = "^0.3.9"
langchain-chroma = "^0.1.4"
langchain-ollama = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
