[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["mattecasu <mattecasu@gmail.com>"]
readme = "README.md"
packages = [{ include = "rag" }]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
langchain = "^0.3.23"
pypdf = "^5.4.0"
langchainhub = "^0.1.20"
transformers = "^4.51.3"
pytest = "^8.3.5"
sentence-transformers = "^3.0.1"
srsly = "^2.4.8"
streamlit = "^1.43.2"
docx2txt = "^0.8"
unstructured = { extras = ["all-docs"], version = "^0.17.0" }
python-docx = "^1.1.2"
watchdog = "^6.0.0"
langchain-community = "^0.3.19"
langchain-chroma = "^0.1.4"
langchain-ollama = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
